// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`include.scss format 1`] = `
====================================options=====================================
parsers: ["sassparser"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@mixin foo() {
  a {
    color: #f99;
  }
}

@include foo() /* comment*/

=====================================output=====================================
@mixin foo() {
  a {
    color: #f99;
  }
}

@include foo(); /* comment*/

================================================================================
`;

exports[`include-2.scss format 1`] = `
====================================options=====================================
parsers: ["sassparser"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@mixin foo() {
  a {
    color: #f99;
  }
}

@include foo() // comment

=====================================output=====================================
@mixin foo() {
  a {
    color: #f99;
  }
}

@include foo(); // comment

================================================================================
`;

exports[`url.scss format 1`] = `
====================================options=====================================
parsers: ["sassparser"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@import url(
  //fonts.googleapis.com/css?family=Open+Sans:400,400italic);

=====================================output=====================================
@import url(//fonts.googleapis.com/css?family=Open+Sans:400,400italic);

================================================================================
`;
